--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -4,7 +4,8 @@
 
 .side-bar {
   float: right;
-  width: 26%;
+  width: 27.3%;
+  min-width: 350px;
   color: Black;
 }
 
